<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"

    android:orientation="vertical"

    android:background="@color/white"
    tools:context="com.kaizenmax.taikinys_icl.view.WelcomeActivity">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/taikinyslogo"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tv1"
        android:text="@string/welcome"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tv2"
        android:text="@string/welcome2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tv3"
        android:text="@string/welcome3"
        />

    <ProgressBar
        android:id="@+id/pBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
    </ProgressBar>



    <!--  <TextView
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:layout_marginTop="20dp"


   android:text="Enter your registered Mobile Number"
   /> -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <EditText
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/mobileCode"
            android:focusable="false"
            android:clickable="false"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:inputType="number"

            />

        <EditText
            android:layout_marginLeft="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mobileNumber"
            android:maxLength="10"
            android:layout_marginTop="10dp"

            android:inputType="number"

            />


    </LinearLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#483d8b"
        android:id="@+id/signUpButton"
        android:text="Sign up"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:id="@+id/tvp1"
        android:text="@string/info1"

        />

    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tvp2"
        android:text="@string/info2"

        />
    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tvp3"
        android:text="@string/info3"

        />






</android.support.v7.widget.LinearLayoutCompat>