<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kaizenmax.taikinys_icl.view.DemoL3Activity"
    tools:showIn="@layout/app_bar_demo_l3">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">



        <android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:id="@+id/parent_linear_layout"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:padding="5dp"
            tools:context="com.kaizenmax.taikinysicl2.view.DemoL3Activity">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

          <!--  <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/demoL3Id"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:enabled="false"
                    android:textColor="@color/blackcolor"
                    android:background="@color/lightgreycolor"
                    android:text="3001"
                    android:focusable="false"
                    android:hint="Demo/L3 Id" />


            </android.support.design.widget.TextInputLayout>   -->


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="start"
                   android:text="@string/demol3idpretext"
                    android:gravity="start"
                    android:textColor="@color/blackcolor"

                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="-36dp"
                    android:id="@+id/demoL3Id"

                    android:textColor="@color/blackcolor"
                    android:background="@color/lightgreycolor"

                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:textColor="@color/darklightblue"
                    android:text="@string/updateDemoL3"
                    android:id="@+id/updateDemoL3"
                    />





</LinearLayout>

                <!-- android:background="@color/lightblue" -->

            <com.baoyachi.stepview.HorizontalStepView

                android:id="@+id/step_view"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"



                android:layout_centerInParent="true"

                />





            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="25dp"
                android:orientation="horizontal" >


                <ImageView
                    android:id="@+id/previous"
                    android:layout_width="80dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:visibility="invisible"
                    android:src="@drawable/previous" />

                <!-- android:onClick="next" -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:text="@string/demol3formtitle1"
                    android:textColor="@color/lightblue"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:textSize="18dp"


                    />

                <ImageView
                    android:id="@+id/next"
                    android:layout_width="80dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:onClick="next"
                    android:layout_weight="1"
                    android:src="@drawable/next" />



            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvprevious"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:text="Previous"
                    android:textSize="12sp"
                    android:visibility="invisible"
                    />

                <!-- android:onClick="next" -->




                <TextView
                    android:id="@+id/tvnext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:text="Next"
                    android:onClick="next"
                    android:textSize="12sp" />







            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/dateOfActivity"
                    android:layout_height="wrap_content"
                    android:inputType="date"


                    android:hint="Date of Activity*" />
            </android.support.design.widget.TextInputLayout>




            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/farmerName"
                        android:maxLength="200"
                        android:hint="Farmer Name*"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/farmerMobile"
                        android:hint="Farmer Mobile*"
                        android:inputType="number"
                        android:maxLength="10"
                        />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:id="@+id/farmerLand"
                        android:maxLength="200"
                        android:hint="Farmer Land (Acres)*"
                        />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textAutoComplete"
                        android:id="@+id/village"
                        android:maxLength="200"
                        android:hint="Village*" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>














            <!--                      android:background="@color/lightgreycolor" -->





            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/upload"
                    android:text="Attach files"

                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/filescount"
                    />

            </LinearLayout>





            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retailer"
                android:id="@+id/retailerDetailsText"

                android:gravity="center_horizontal"
                android:textColor="#333"
                />




            <Button
                android:id="@+id/addButton"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#3390FF"
                android:layout_gravity="left"

                android:textColor="#FFF"
                android:text="Add Row"
                android:onClick="addRetailerRow"
                android:textAllCaps="false"
                android:paddingLeft="5dp"/>






            <Button
                android:layout_width="match_parent"
                android:background="#228B22"
                android:id="@+id/saveBtn"
                android:text="Save"
                android:textColor="#fff"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.LinearLayoutCompat>

        <!--  android:onClick="addRetailerRow"-->

    </ScrollView>







</android.support.v7.widget.LinearLayoutCompat>